fix: ellipsis when hotspot name is too long, tooltip on hover

--- a/src/app/core/scss/overrides/_mat-tooltip.scss
+++ b/src/app/core/scss/overrides/_mat-tooltip.scss
@@ -4,6 +4,8 @@
   padding-left: 8px;
   padding-right: 8px;
   overflow: hidden;
+  word-wrap: break-word;
+  white-space: initial;
   text-overflow: ellipsis;
   font-size: 10px;
   padding-top: 2px;
