--- a/src/app/editor/hotspot/hotspot.component.scss
+++ b/src/app/editor/hotspot/hotspot.component.scss
@@ -14,6 +14,9 @@
     box-sizing: border-box;
     font-size: 16px;
     line-height: 20px;
+
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &__buttons {
